objects/SFDC_SAP_Price_Sync__c.object
<CustomObject>
    <description>Price comparison results between SAP and SFDC are stored in this object</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_SAP_Sync</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_SAP_Sync1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corrective_Action__c</fullName>
        <label>Corrective Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KC_SAP__c</fullName>
        <label>KC_SAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SAP_BU__c</fullName>
        <description>Store Business name for SFDC SAP sync If In SAP Not SFDC</description>
        <label>SAP BU</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Cluster__c</fullName>
        <label>SAP_Cluster</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_Price_Payment_Terms__c</fullName>
        <label>SAP Customer_Price_Payment_Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Destination_Country_Code__c</fullName>
        <description>This field is used to store Destination Country Code value which is available from SAP while comparing the pricing records.</description>
        <label>SAP Destination Country Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Dist_Channel_Code__c</fullName>
        <description>Stores Dist Channel Code from SAP If in SAP not in SFDC</description>
        <label>SAP Dist Channel Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Division_Code__c</fullName>
        <description>Store SAP Div Code from SAP for If in SAP not SFDC</description>
        <label>SAP Division Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Document_Currency_Code__c</fullName>
        <description>This field is used to store SAP Document Currency Code value which is available from SAP while comparing the pricing records.</description>
        <label>SAP Document Currency Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_End_User_Code__c</fullName>
        <label>SAP End User Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Ext_Matl_Grp_Code__c</fullName>
        <label>SAP Ext Matl Grp Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Fixed_Date_Payment_Terms__c</fullName>
        <label>SAP Fixed_Date_Payment_Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Key_Combination_Code__c</fullName>
        <label>SAP Key_Combination_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Material_Code__c</fullName>
        <label>SAP Material Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Material_Group_2_Code__c</fullName>
        <label>SAP Material Group 2 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_PCKC_Code__c</fullName>
        <formula>SAP_Pricing_Condition_Code__c &amp; &quot;|&quot; &amp; SAP_Key_Combination_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP PCKC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Payer_Code__c</fullName>
        <description>This field is used to store SAP Payer Code value which is available from SAP while comparing the pricing records.</description>
        <label>SAP Payer Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Per__c</fullName>
        <label>SAP Per</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Price_Zone_Code__c</fullName>
        <label>SAP Price Zone Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Pricing_Condition_Code__c</fullName>
        <label>SAP Pricing_Condition_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Pricing_Condition_Record_Number__c</fullName>
        <label>SAP Pricing Condition Record Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Product_Hierarchy_Code__c</fullName>
        <label>SAP Product Hierarchy Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Rate_Unit_Per_UoM__c</fullName>
        <formula>SAP_Rate__c &amp;&quot;|&quot;&amp; SAP_Unit__c &amp;&quot;|&quot;&amp; SAP_Per__c &amp;&quot;|&quot;&amp; SAP_UoM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Rate &amp; Unit &amp; Per &amp; UoM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Rate__c</fullName>
        <label>SAP Rate</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Sales_Order_Item_Code__c</fullName>
        <description>To store Sales order Item Code value available from SAP while comparing records</description>
        <label>SAP Sales Order Item Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Sales_Order_Type_Code__c</fullName>
        <description>This field is used to store SAP Sales Order Type Code value which is available from SAP while comparing the pricing records.</description>
        <label>SAP Sales Order Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Sales_Org_Code__c</fullName>
        <description>Store Sales Org Code for In SAP Not SFDC</description>
        <label>SAP Sales Org Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Scale_QTY__c</fullName>
        <label>SAP Scale QTY</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Scale_Rate__c</fullName>
        <label>SAP Scale Rate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Scale_UoM_Unit__c</fullName>
        <label>SAP Scale_UoM_Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Ship_To_Code__c</fullName>
        <label>SAP Ship To Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Sold_To_Code__c</fullName>
        <label>SAP Sold To Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Unit__c</fullName>
        <label>SAP Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_UoM__c</fullName>
        <label>SAP UoM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Valid_From__c</fullName>
        <label>SAP Valid_From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Valid_To__c</fullName>
        <label>SAP Valid_To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Value_Center_Code__c</fullName>
        <label>SAP Value Center Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_BU__c</fullName>
        <label>SFDC PA BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Customer_Price_Payment_Terms__c</fullName>
        <label>SFDC PA Customer_Price_Payment_Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Destination_Country_Code__c</fullName>
        <description>This field is used to store SFDC Destination Country Code value which is available from SAP while comparing the pricing records.</description>
        <label>SFDC PA Destination Country Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Dist_Channel_Code__c</fullName>
        <label>SFDC PA Dist Channel Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Division_Code__c</fullName>
        <label>SFDC PA Division Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Document_Currency_Code__c</fullName>
        <description>This field is used to store SFDC Document Currency Code value which is available from SAP while comparing the pricing records.</description>
        <label>SFDC PA Document Currency Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_End_User_Code__c</fullName>
        <label>SFDC PA End User Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Ext_Matl_Grp_Code__c</fullName>
        <label>SFDC PA Ext Matl Grp Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Fixed_Date_Payment_Terms__c</fullName>
        <label>SFDC PA Fixed_Date_Payment_Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Material_Code__c</fullName>
        <label>SFDC PA Material Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Material_Group_2_Code__c</fullName>
        <label>SFDC PA Material Group 2 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Payer_Code__c</fullName>
        <description>This field is used to store SFDC Payer Code value which is available from SAP while comparing the pricing records.</description>
        <label>SFDC PA Payer Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Per__c</fullName>
        <label>SFDC PA Per</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Price_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC PA Price Record</label>
        <referenceTo>ERP_Export_to_SAP__c</referenceTo>
        <relationshipLabel>SFDC SAP Price Sync</relationshipLabel>
        <relationshipName>SFDC_SAP_Price_Sync</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Price_Zone_Code__c</fullName>
        <label>SFDC PA Price Zone Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Product_Hierarchy_Code__c</fullName>
        <label>SFDC PA Product Hierarchy Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Rate__c</fullName>
        <label>SFDC PA Rate</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Sales_Order_Item_Code__c</fullName>
        <description>To store Sales order Item Code value available from SFDC while comparing records</description>
        <label>SFDC PA Sales Order Item Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Sales_Order_Type_Code__c</fullName>
        <description>This field is used to store SFDC Sales Order Type Code value which is available from SAP while comparing the pricing records.</description>
        <label>SFDC PA Sales Order Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Sales_Org_Code__c</fullName>
        <label>SFDC PA Sales Org Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Scale_QTY__c</fullName>
        <label>SFDC PA Scale QTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Scale_Rate__c</fullName>
        <label>SFDC PA Scale Rate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Scale_UoM_Unit__c</fullName>
        <label>SFDC PA Scale_UoM_Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Ship_To_Code__c</fullName>
        <label>SFDC PA Ship To Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Sold_To_Code__c</fullName>
        <label>SFDC PA Sold To Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Unit__c</fullName>
        <label>SFDC PA Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_UoM_c__c</fullName>
        <label>SFDC PA UoM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Valid_From__c</fullName>
        <label>SFDC PA Valid_From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Valid_To__c</fullName>
        <label>SFDC PA Valid_To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_PA_Value_Center_Code__c</fullName>
        <label>SFDC PA Value Center Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Rate_Unit_Per_Uom__c</fullName>
        <formula>SFDC_PA_Rate__c &amp; &quot;|&quot; &amp;  SAP_Unit__c &amp; &quot;|&quot; &amp; SFDC_PA_Per__c &amp; &quot;|&quot; &amp;  SAP_UoM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC PA Rate &amp; Unit &amp; Per &amp; UoM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sys_Id__c</fullName>
        <label>Sys Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SFDC SAP Price Sync</label>
    <nameField>
        <label>SFDC SAP Price Sync Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFDC SAP Price Sync</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Share_with_all_viewers__c</fullName>
        <label>Share with all viewers</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Share_with_assignee__c</fullName>
        <label>Share with assignee</label>
    </sharingReasons>
    <validationRules>
        <fullName>SFDCPA_Price_record_mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( SFDC_PA_Price_Record__c )</errorConditionFormula>
        <errorDisplayField>SFDC_PA_Price_Record__c</errorDisplayField>
        <errorMessage>SFDC Price record id is mandatory</errorMessage>
    </validationRules>
</CustomObject>